Fixing Logo on Mobile

--- a/style.css
+++ b/style.css
@@ -227,16 +227,22 @@ footer {
   }
 
   header {
-     height: 0; 
+     top: 0; 
+  }
+
+  .logo-header {
+    position: relative;
   }
 
   .logo {
-    position: relative;
-    left: 0;
-    top: 0;
-    display: block;
-    text-align: center;
-    margin: 0px auto;
+    position: absolute; 
+    top: 20px; 
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80px; 
+    height: 80px; 
+    background-size: cover; 
+    border-radius: 50%;
   }
 
   nav {
